Fix spacing on mobile

--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -4,6 +4,8 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .intro-details__name {
