--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -476,7 +476,7 @@ body {
   font-weight: 200;
   max-width: 800px;
   margin: 2rem auto;
-  width: 90vw;
+  width: 100%;
   padding: 1rem;
   background-color: #e5b8f9;
 }
